@@ -22,15 +22,6 @@
 	"Kevin Breit" />
       </screenshot>
     </figure>
-  		    <figure>
-      <title>Sample Flowchart Diagram</title>
-        <screenshot>
-          <screeninfo>This is a simple flowchart diagram produced 
-  				using <application>Dia</application>.
-          </screeninfo>
-          <graphic format="PNG" fileref="graphics/sample-flowchart" srccredit="Mark Dexter" />
-        </screenshot>
-      </figure>
   </para>
   </sect1>
     <sect1 id="starting-dia">  <title>Starting Dia</title>
